compiler/generated/OQASM2Parser.cpp

// Generated from OQASM2.g4 by ANTLR 4.7.1


#include "OQASM2Listener.h"

#include "OQASM2Parser.h"


using namespace antlrcpp;
using namespace oqasm;
using namespace antlr4;

OQASM2Parser::OQASM2Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

OQASM2Parser::~OQASM2Parser() {
  delete _interpreter;
}

std::string OQASM2Parser::getGrammarFileName() const {
  return "OQASM2.g4";
}

const std::vector<std::string>& OQASM2Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& OQASM2Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- MainprogContext ------------------------------------------------------------------

OQASM2Parser::MainprogContext::MainprogContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OQASM2Parser::MainprogContext::OPENQASM() {
  return getToken(OQASM2Parser::OPENQASM, 0);
}

OQASM2Parser::RealContext* OQASM2Parser::MainprogContext::real() {
  return getRuleContext<OQASM2Parser::RealContext>(0);
}

tree::TerminalNode* OQASM2Parser::MainprogContext::EOL() {
  return getToken(OQASM2Parser::EOL, 0);
}

std::vector<OQASM2Parser::CommentContext *> OQASM2Parser::MainprogContext::comment() {
  return getRuleContexts<OQASM2Parser::CommentContext>();
}

OQASM2Parser::CommentContext* OQASM2Parser::MainprogContext::comment(size_t i) {
  return getRuleContext<OQASM2Parser::CommentContext>(i);
}

OQASM2Parser::ProgramContext* OQASM2Parser::MainprogContext::program() {
  return getRuleContext<OQASM2Parser::ProgramContext>(0);
}


size_t OQASM2Parser::MainprogContext::getRuleIndex() const {
  return OQASM2Parser::RuleMainprog;
}

void OQASM2Parser::MainprogContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMainprog(this);
}

void OQASM2Parser::MainprogContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMainprog(this);
}

OQASM2Parser::MainprogContext* OQASM2Parser::mainprog() {
  MainprogContext *_localctx = _tracker.createInstance<MainprogContext>(_ctx, getState());
  enterRule(_localctx, 0, OQASM2Parser::RuleMainprog);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == OQASM2Parser::COMMENT) {
      setState(80);
      comment();
      setState(85);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(86);
    match(OQASM2Parser::OPENQASM);
    setState(87);
    real();
    setState(88);
    match(OQASM2Parser::T__0);
    setState(89);
    match(OQASM2Parser::EOL);
    setState(91);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << OQASM2Parser::T__1)
      | (1ULL << OQASM2Parser::T__9)
      | (1ULL << OQASM2Parser::T__10)
      | (1ULL << OQASM2Parser::T__11)
      | (1ULL << OQASM2Parser::COMMENT)
      | (1ULL << OQASM2Parser::QREG)
      | (1ULL << OQASM2Parser::CREG)
      | (1ULL << OQASM2Parser::GATE)
      | (1ULL << OQASM2Parser::MEASURE)
      | (1ULL << OQASM2Parser::RESET)
      | (1ULL << OQASM2Parser::BARRIER)
      | (1ULL << OQASM2Parser::OPAQUE)
      | (1ULL << OQASM2Parser::ID))) != 0)) {
      setState(90);
      program();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

OQASM2Parser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<OQASM2Parser::LineContext *> OQASM2Parser::ProgramContext::line() {
  return getRuleContexts<OQASM2Parser::LineContext>();
}

OQASM2Parser::LineContext* OQASM2Parser::ProgramContext::line(size_t i) {
  return getRuleContext<OQASM2Parser::LineContext>(i);
}


size_t OQASM2Parser::ProgramContext::getRuleIndex() const {
  return OQASM2Parser::RuleProgram;
}

void OQASM2Parser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void OQASM2Parser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

OQASM2Parser::ProgramContext* OQASM2Parser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 2, OQASM2Parser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(93);
      line();
      setState(96); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << OQASM2Parser::T__1)
      | (1ULL << OQASM2Parser::T__9)
      | (1ULL << OQASM2Parser::T__10)
      | (1ULL << OQASM2Parser::T__11)
      | (1ULL << OQASM2Parser::COMMENT)
      | (1ULL << OQASM2Parser::QREG)
      | (1ULL << OQASM2Parser::CREG)
      | (1ULL << OQASM2Parser::GATE)
      | (1ULL << OQASM2Parser::MEASURE)
      | (1ULL << OQASM2Parser::RESET)
      | (1ULL << OQASM2Parser::BARRIER)
      | (1ULL << OQASM2Parser::OPAQUE)
      | (1ULL << OQASM2Parser::ID))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

OQASM2Parser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OQASM2Parser::LineContext::EOL() {
  return getToken(OQASM2Parser::EOL, 0);
}

std::vector<OQASM2Parser::StatementContext *> OQASM2Parser::LineContext::statement() {
  return getRuleContexts<OQASM2Parser::StatementContext>();
}

OQASM2Parser::StatementContext* OQASM2Parser::LineContext::statement(size_t i) {
  return getRuleContext<OQASM2Parser::StatementContext>(i);
}

OQASM2Parser::CommentContext* OQASM2Parser::LineContext::comment() {
  return getRuleContext<OQASM2Parser::CommentContext>(0);
}

std::vector<OQASM2Parser::IncludeContext *> OQASM2Parser::LineContext::include() {
  return getRuleContexts<OQASM2Parser::IncludeContext>();
}

OQASM2Parser::IncludeContext* OQASM2Parser::LineContext::include(size_t i) {
  return getRuleContext<OQASM2Parser::IncludeContext>(i);
}


size_t OQASM2Parser::LineContext::getRuleIndex() const {
  return OQASM2Parser::RuleLine;
}

void OQASM2Parser::LineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLine(this);
}

void OQASM2Parser::LineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLine(this);
}

OQASM2Parser::LineContext* OQASM2Parser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 4, OQASM2Parser::RuleLine);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(113);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case OQASM2Parser::T__9:
      case OQASM2Parser::T__10:
      case OQASM2Parser::T__11:
      case OQASM2Parser::QREG:
      case OQASM2Parser::CREG:
      case OQASM2Parser::GATE:
      case OQASM2Parser::MEASURE:
      case OQASM2Parser::RESET:
      case OQASM2Parser::BARRIER:
      case OQASM2Parser::OPAQUE:
      case OQASM2Parser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(99); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(98);
          statement();
          setState(101); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << OQASM2Parser::T__9)
          | (1ULL << OQASM2Parser::T__10)
          | (1ULL << OQASM2Parser::T__11)
          | (1ULL << OQASM2Parser::QREG)
          | (1ULL << OQASM2Parser::CREG)
          | (1ULL << OQASM2Parser::GATE)
          | (1ULL << OQASM2Parser::MEASURE)
          | (1ULL << OQASM2Parser::RESET)
          | (1ULL << OQASM2Parser::BARRIER)
          | (1ULL << OQASM2Parser::OPAQUE)
          | (1ULL << OQASM2Parser::ID))) != 0));
        setState(103);
        match(OQASM2Parser::EOL);
        break;
      }

      case OQASM2Parser::COMMENT: {
        enterOuterAlt(_localctx, 2);
        setState(105);
        comment();
        break;
      }

      case OQASM2Parser::T__1: {
        enterOuterAlt(_localctx, 3);
        setState(107); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(106);
          include();
          setState(109); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == OQASM2Parser::T__1);
        setState(111);
        match(OQASM2Parser::EOL);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

OQASM2Parser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OQASM2Parser::RegdeclContext* OQASM2Parser::StatementContext::regdecl() {
  return getRuleContext<OQASM2Parser::RegdeclContext>(0);
}

OQASM2Parser::GatedeclContext* OQASM2Parser::StatementContext::gatedecl() {
  return getRuleContext<OQASM2Parser::GatedeclContext>(0);
}

OQASM2Parser::OpaqueContext* OQASM2Parser::StatementContext::opaque() {
  return getRuleContext<OQASM2Parser::OpaqueContext>(0);
}

OQASM2Parser::QopContext* OQASM2Parser::StatementContext::qop() {
  return getRuleContext<OQASM2Parser::QopContext>(0);
}

OQASM2Parser::ConditionalContext* OQASM2Parser::StatementContext::conditional() {
  return getRuleContext<OQASM2Parser::ConditionalContext>(0);
}


size_t OQASM2Parser::StatementContext::getRuleIndex() const {
  return OQASM2Parser::RuleStatement;
}

void OQASM2Parser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void OQASM2Parser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

OQASM2Parser::StatementContext* OQASM2Parser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 6, OQASM2Parser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(128);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case OQASM2Parser::QREG:
      case OQASM2Parser::CREG: {
        enterOuterAlt(_localctx, 1);
        setState(115);
        regdecl();
        setState(116);
        match(OQASM2Parser::T__0);
        break;
      }

      case OQASM2Parser::GATE: {
        enterOuterAlt(_localctx, 2);
        setState(118);
        gatedecl();
        break;
      }

      case OQASM2Parser::OPAQUE: {
        enterOuterAlt(_localctx, 3);
        setState(119);
        opaque();
        setState(120);
        match(OQASM2Parser::T__0);
        break;
      }

      case OQASM2Parser::T__9:
      case OQASM2Parser::T__10:
      case OQASM2Parser::MEASURE:
      case OQASM2Parser::RESET:
      case OQASM2Parser::BARRIER:
      case OQASM2Parser::ID: {
        enterOuterAlt(_localctx, 4);
        setState(122);
        qop();
        setState(123);
        match(OQASM2Parser::T__0);
        break;
      }

      case OQASM2Parser::T__11: {
        enterOuterAlt(_localctx, 5);
        setState(125);
        conditional();
        setState(126);
        match(OQASM2Parser::T__0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

OQASM2Parser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OQASM2Parser::CommentContext::COMMENT() {
  return getToken(OQASM2Parser::COMMENT, 0);
}


size_t OQASM2Parser::CommentContext::getRuleIndex() const {
  return OQASM2Parser::RuleComment;
}

void OQASM2Parser::CommentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComment(this);
}

void OQASM2Parser::CommentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComment(this);
}

OQASM2Parser::CommentContext* OQASM2Parser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 8, OQASM2Parser::RuleComment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    match(OQASM2Parser::COMMENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IncludeContext ------------------------------------------------------------------

OQASM2Parser::IncludeContext::IncludeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OQASM2Parser::FilenameContext* OQASM2Parser::IncludeContext::filename() {
  return getRuleContext<OQASM2Parser::FilenameContext>(0);
}


size_t OQASM2Parser::IncludeContext::getRuleIndex() const {
  return OQASM2Parser::RuleInclude;
}

void OQASM2Parser::IncludeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInclude(this);
}

void OQASM2Parser::IncludeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInclude(this);
}

OQASM2Parser::IncludeContext* OQASM2Parser::include() {
  IncludeContext *_localctx = _tracker.createInstance<IncludeContext>(_ctx, getState());
  enterRule(_localctx, 10, OQASM2Parser::RuleInclude);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    match(OQASM2Parser::T__1);
    setState(133);
    filename();
    setState(134);
    match(OQASM2Parser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FilenameContext ------------------------------------------------------------------

OQASM2Parser::FilenameContext::FilenameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OQASM2Parser::StringContext* OQASM2Parser::FilenameContext::string() {
  return getRuleContext<OQASM2Parser::StringContext>(0);
}


size_t OQASM2Parser::FilenameContext::getRuleIndex() const {
  return OQASM2Parser::RuleFilename;
}

void OQASM2Parser::FilenameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFilename(this);
}

void OQASM2Parser::FilenameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFilename(this);
}

OQASM2Parser::FilenameContext* OQASM2Parser::filename() {
  FilenameContext *_localctx = _tracker.createInstance<FilenameContext>(_ctx, getState());
  enterRule(_localctx, 12, OQASM2Parser::RuleFilename);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(136);
    string();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RegdeclContext ------------------------------------------------------------------

OQASM2Parser::RegdeclContext::RegdeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OQASM2Parser::QregContext* OQASM2Parser::RegdeclContext::qreg() {
  return getRuleContext<OQASM2Parser::QregContext>(0);
}

OQASM2Parser::QregisterContext* OQASM2Parser::RegdeclContext::qregister() {
  return getRuleContext<OQASM2Parser::QregisterContext>(0);
}

OQASM2Parser::CregContext* OQASM2Parser::RegdeclContext::creg() {
  return getRuleContext<OQASM2Parser::CregContext>(0);
}

OQASM2Parser::CregisterContext* OQASM2Parser::RegdeclContext::cregister() {
  return getRuleContext<OQASM2Parser::CregisterContext>(0);
}


size_t OQASM2Parser::RegdeclContext::getRuleIndex() const {
  return OQASM2Parser::RuleRegdecl;
}

void OQASM2Parser::RegdeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRegdecl(this);
}

void OQASM2Parser::RegdeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRegdecl(this);
}

OQASM2Parser::RegdeclContext* OQASM2Parser::regdecl() {
  RegdeclContext *_localctx = _tracker.createInstance<RegdeclContext>(_ctx, getState());
  enterRule(_localctx, 14, OQASM2Parser::RuleRegdecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(144);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case OQASM2Parser::QREG: {
        enterOuterAlt(_localctx, 1);
        setState(138);
        qreg();
        setState(139);
        qregister();
        break;
      }

      case OQASM2Parser::CREG: {
        enterOuterAlt(_localctx, 2);
        setState(141);
        creg();
        setState(142);
        cregister();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QregisterContext ------------------------------------------------------------------

OQASM2Parser::QregisterContext::QregisterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OQASM2Parser::IdContext* OQASM2Parser::QregisterContext::id() {
  return getRuleContext<OQASM2Parser::IdContext>(0);
}

OQASM2Parser::RegistersizeContext* OQASM2Parser::QregisterContext::registersize() {
  return getRuleContext<OQASM2Parser::RegistersizeContext>(0);
}


size_t OQASM2Parser::QregisterContext::getRuleIndex() const {
  return OQASM2Parser::RuleQregister;
}

void OQASM2Parser::QregisterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQregister(this);
}

void OQASM2Parser::QregisterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQregister(this);
}

OQASM2Parser::QregisterContext* OQASM2Parser::qregister() {
  QregisterContext *_localctx = _tracker.createInstance<QregisterContext>(_ctx, getState());
  enterRule(_localctx, 16, OQASM2Parser::RuleQregister);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(152);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(146);
      id();
      setState(147);
      match(OQASM2Parser::T__2);
      setState(148);
      registersize();
      setState(149);
      match(OQASM2Parser::T__3);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(151);
      id();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CregisterContext ------------------------------------------------------------------

OQASM2Parser::CregisterContext::CregisterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OQASM2Parser::IdContext* OQASM2Parser::CregisterContext::id() {
  return getRuleContext<OQASM2Parser::IdContext>(0);
}

OQASM2Parser::RegistersizeContext* OQASM2Parser::CregisterContext::registersize() {
  return getRuleContext<OQASM2Parser::RegistersizeContext>(0);
}


size_t OQASM2Parser::CregisterContext::getRuleIndex() const {
  return OQASM2Parser::RuleCregister;
}

void OQASM2Parser::CregisterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCregister(this);
}

void OQASM2Parser::CregisterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCregister(this);
}

OQASM2Parser::CregisterContext* OQASM2Parser::cregister() {
  CregisterContext *_localctx = _tracker.createInstance<CregisterContext>(_ctx, getState());
  enterRule(_localctx, 18, OQASM2Parser::RuleCregister);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(160);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(154);
      id();
      setState(155);
      match(OQASM2Parser::T__2);
      setState(156);
      registersize();
      setState(157);
      match(OQASM2Parser::T__3);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(159);
      id();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RegistersizeContext ------------------------------------------------------------------

OQASM2Parser::RegistersizeContext::RegistersizeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OQASM2Parser::RegistersizeContext::INT() {
  return getToken(OQASM2Parser::INT, 0);
}


size_t OQASM2Parser::RegistersizeContext::getRuleIndex() const {
  return OQASM2Parser::RuleRegistersize;
}

void OQASM2Parser::RegistersizeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRegistersize(this);
}

void OQASM2Parser::RegistersizeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OQASM2Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRegistersize(this);
}

OQASM2Parser::RegistersizeContext* OQASM2Parser::registersize() {
  RegistersizeContext *_localctx = _tracker.createInstance<RegistersizeContext>(_ctx, getState());
  enterRule(_localctx, 20, OQASM2Parser::RuleRegistersize);
